force-app/main/default/objects/CEMS_Projects__c/CEMS_Projects__c.object-meta.xml
<CustomObject>
    <label>Projects</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>