force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>