force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_Duration_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Duration_Of_Project__c</fullName>
    <formula>TEXT(CEMS_End_Date__c-CEMS_Start_Date__c) + &apos; Days&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Of Project</label>
    <type>Text</type>
</CustomField>