force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>