force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_No_Of_Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>CEMS_No_Of_Resources_Required__c</fullName>
    <label>No Of Resources Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>