force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_POC_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CEMS_POC_Contact_Email__c</fullName>
    <label>POC Contact Email</label>
    <type>Email</type>
</CustomField>