force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_Point_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Point_Of_Contact__c</fullName>
    <label>Point Of Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>