force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_Project_Details__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Project_Details__c</fullName>
    <label>Project Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>