force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Project_ID__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>