force-app/main/default/objects/CEMS_Projects__c/fields/CEMS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>