force-app/main/default/objects/CEMS_Projects__c/validationRules/Project_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Start_Date__c  &gt;  CEMS_End_Date__c</errorConditionFormula>
    <errorDisplayField>CEMS_End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be greater than start date..</errorMessage>
</ValidationRule>