force-app/main/default/objects/CEMS_Projects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_POC_Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>